glib: Remove gio-sys dependency, gio is its own crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,10 +17,6 @@ name = "glib"
 bitflags = "0.5"
 libc = "0.2"
 
-[dependencies.gio-sys]
-git = "https://github.com/gtk-rs/sys"
-version = "0.3.1"
-
 [dependencies.glib-sys]
 git = "https://github.com/gtk-rs/sys"
 version = "0.3.1"
@@ -30,5 +26,5 @@ git = "https://github.com/gtk-rs/sys"
 version = "0.3.1"
 
 [features]
-v2_38 = [ "glib-sys/v2_38", "gio-sys/v2_38", "gobject-sys/v2_38" ]
-v2_40 = [ "v2_38", "glib-sys/v2_40", "gio-sys/v2_40" ]
+v2_38 = ["glib-sys/v2_38", "gobject-sys/v2_38"]
+v2_40 = ["v2_38", "glib-sys/v2_40"]
