--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ purge-lgpl-docs = ["gtk-rs-lgpl-docs"]
 v2_28 = ["gdk-pixbuf-sys/v2_28"]
 v2_30 = ["v2_28", "gdk-pixbuf-sys/v2_30"]
 v2_32 = ["v2_30", "gdk-pixbuf-sys/v2_32"]
+v2_36 = ["v2_32", "gdk-pixbuf-sys/v2_36"]
 
 [build-dependencies.gtk-rs-lgpl-docs]
 git = "https://github.com/gtk-rs/lgpl-docs"
