--- a/gobject-sys/Cargo.toml
+++ b/gobject-sys/Cargo.toml
@@ -5,10 +5,7 @@ pkg-config = "0.3.7"
 [dependencies]
 bitflags = "0.4"
 libc = "0.2"
-
-[dependencies.glib-sys]
-path = "../glib-sys"
-version = "0.3.2"
+glib-sys = "^0.3.2"
 
 [features]
 v2_34 = []
