--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,14 +16,8 @@ name = "glib"
 [dependencies]
 bitflags = "0.5"
 libc = "0.2"
-
-[dependencies.glib-sys]
-git = "https://github.com/gtk-rs/sys"
-version = "0.3.2"
-
-[dependencies.gobject-sys]
-git = "https://github.com/gtk-rs/sys"
-version = "0.3.2"
+glib-sys = "^0.3.2"
+gobject-sys = "^0.3.2"
 
 [features]
 v2_38 = ["glib-sys/v2_38", "gobject-sys/v2_38"]
