--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,17 +24,10 @@ v2_32 = ["v2_30", "gdk-pixbuf-sys/v2_32"]
 v2_36 = ["v2_32", "gdk-pixbuf-sys/v2_36"]
 
 [build-dependencies.gtk-rs-lgpl-docs]
-git = "https://github.com/gtk-rs/lgpl-docs"
-version = "0.1.0"
+version = "^0.1.1"
 optional = true
 
 [dependencies]
 libc = "0.2"
-
-[dependencies.gdk-pixbuf-sys]
-git = "https://github.com/gtk-rs/sys"
-version = "0.3.2"
-
-[dependencies.glib]
-git = "https://github.com/gtk-rs/glib"
-version = "0.1.1"
+gdk-pixbuf-sys = "^0.3.2"
+glib = "^0.1.1"
