--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,11 +22,5 @@ v1_42 = ["v1_38", "pango-sys/v1_42"]
 
 [dependencies]
 libc = "0.2"
-
-[dependencies.pango-sys]
-git = "https://github.com/gtk-rs/sys"
-version = "0.3.2"
-
-[dependencies.glib]
-git = "https://github.com/gtk-rs/glib"
-version = "0.1.1"
+pango-sys = "^0.3.2"
+glib = "^0.1.1"
