--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,18 +22,11 @@ purge-lgpl-docs = ["gtk-rs-lgpl-docs"]
 v1_12 = ["cairo-sys-rs/v1_12"]
 
 [build-dependencies.gtk-rs-lgpl-docs]
-git = "https://github.com/gtk-rs/lgpl-docs"
-version = "0.1.0"
+version = "^0.1.1"
 optional = true
-
-[dependencies.cairo-sys-rs]
-path = "cairo-sys-rs"
-version = "0.3.2"
-
-[dependencies.glib]
-git = "https://github.com/gtk-rs/glib"
-version = "0.1.1"
 
 [dependencies]
 libc = "0.2"
 c_vec = "~1.0"
+cairo-sys-rs = "^0.3.2"
+glib = "^0.1.1"
