--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,38 +31,16 @@ v3_20 = ["v3_18", "gdk-sys/v3_20", "gio/v2_48"]
 v3_22 = ["v3_20", "gdk-sys/v3_22"]
 
 [build-dependencies.gtk-rs-lgpl-docs]
-git = "https://github.com/gtk-rs/lgpl-docs"
-version = "0.1.0"
+version = "^0.1.1"
 optional = true
 
 [dependencies]
 libc = "0.2"
 bitflags = "0.5"
-
-[dependencies.glib-sys]
-git = "https://github.com/gtk-rs/sys"
-version = "0.3.2"
-
-[dependencies.gdk-sys]
-git = "https://github.com/gtk-rs/sys"
-version = "0.3.2"
-
-[dependencies.cairo-rs]
-git = "https://github.com/gtk-rs/cairo"
-version = "0.1.1"
-
-[dependencies.gdk-pixbuf]
-git = "https://github.com/gtk-rs/gdk-pixbuf"
-version = "0.1.1"
-
-[dependencies.gio]
-git = "https://github.com/gtk-rs/gio"
-version = "0.1.1"
-
-[dependencies.glib]
-git = "https://github.com/gtk-rs/glib"
-version = "0.1.1"
-
-[dependencies.pango]
-git = "https://github.com/gtk-rs/pango"
-version = "0.1.1"
+glib-sys = "^0.3.2"
+gdk-sys = "^0.3.2"
+cairo-rs = "^0.1.1"
+gdk-pixbuf = "^0.1.1"
+gio = "^0.1.1"
+glib = "^0.1.1"
+pango = "^0.1.1"
