--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,3 +30,7 @@ version = "0.3.2"
 [dependencies.glib]
 git = "https://github.com/gtk-rs/glib"
 version = "0.1.1"
+
+[dependencies.glib-sys]
+git = "https://github.com/gtk-rs/sys"
+version = "0.3.2"
