--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ v1_42 = ["v1_38", "pango-sys/v1_42"]
 
 [dependencies]
 libc = "0.2"
+bitflags = "0.5"
 
 [dependencies.pango-sys]
 git = "https://github.com/gtk-rs/sys"
