--- a/Gir.toml
+++ b/Gir.toml
@@ -8,12 +8,27 @@ generate_safety_asserts = false
 min_cfg_version = "1.30"
 
 generate = [
-    "Pango.Context",
-    "Pango.Layout",
     "Pango.Alignment",
+    "Pango.BidiType",
+    "Pango.Context",
+    "Pango.Direction",
+    "Pango.EllipsizeMode",
     "Pango.FontMap",
+    "Pango.FontMask",
+    "Pango.Gravity",
+    "Pango.GravityHint",
+    "Pango.Layout",
+    "Pango.LayoutIter",
+    "Pango.LayoutLine",
+    "Pango.Script",
+    "Pango.Stretch",
+    "Pango.Style",
+    "Pango.Variant",
+    "Pango.Weight",
+    "Pango.WrapMode",
 ]
 
 manual = [
     "Pango.FontDescription",
+    "Pango.Rectangle",
 ]
