gdk: Add complete implementation for RGBA

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,10 @@ version = "0.3.2"
 git = "https://github.com/gtk-rs/sys"
 version = "0.3.2"
 
+[dependencies.gobject-sys]
+git = "https://github.com/gtk-rs/sys"
+version = "0.3.2"
+
 [dependencies.cairo-rs]
 git = "https://github.com/gtk-rs/cairo"
 version = "0.1.1"
