--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,19 +57,19 @@ name = "simple_treeview"
 name = "menu_bar"
 
 [replace]
-"gtk:0.1.2" = { git = 'https://github.com/EPashkin/gtk' }
-"gdk:0.5.2" = { git = 'https://github.com/EPashkin/gdk' }
-"gdk-pixbuf:0.1.2" = { git = 'https://github.com/EPashkin/gdk-pixbuf' }
-"pango:0.1.2" = { git = 'https://github.com/EPashkin/pango' }
-"cairo-rs:0.1.2" = { git = 'https://github.com/EPashkin/cairo' }
-"cairo-sys-rs:0.3.3" = { git = 'https://github.com/EPashkin/cairo' }
-"gio:0.1.2" = { git = 'https://github.com/EPashkin/gio' }
-"glib:0.1.2" = { git = 'https://github.com/EPashkin/glib' }
-"atk-sys:0.3.3" = { git = 'https://github.com/EPashkin/rust-gnome-sys' }
-"gdk-pixbuf-sys:0.3.3" = { git = 'https://github.com/EPashkin/rust-gnome-sys' }
-"gdk-sys:0.3.3" = { git = 'https://github.com/EPashkin/rust-gnome-sys' }
-"gio-sys:0.3.3" = { git = 'https://github.com/EPashkin/rust-gnome-sys' }
-"glib-sys:0.3.3" = { git = 'https://github.com/EPashkin/rust-gnome-sys' }
-"gobject-sys:0.3.3" = { git = 'https://github.com/EPashkin/rust-gnome-sys' }
-"gtk-sys:0.3.3" = { git = 'https://github.com/EPashkin/rust-gnome-sys' }
-"pango-sys:0.3.3" = { git = 'https://github.com/EPashkin/rust-gnome-sys' }
+"gtk:0.1.2" = { git = 'https://github.com/gtk-rs/gtk' }
+"gdk:0.5.2" = { git = 'https://github.com/gtk-rs/gdk' }
+"gdk-pixbuf:0.1.2" = { git = 'https://github.com/gtk-rs/gdk-pixbuf' }
+"pango:0.1.2" = { git = 'https://github.com/gtk-rs/pango' }
+"cairo-rs:0.1.2" = { git = 'https://github.com/gtk-rs/cairo' }
+"cairo-sys-rs:0.3.3" = { git = 'https://github.com/gtk-rs/cairo' }
+"gio:0.1.2" = { git = 'https://github.com/gtk-rs/gio' }
+"glib:0.1.2" = { git = 'https://github.com/gtk-rs/glib' }
+"atk-sys:0.3.3" = { git = 'https://github.com/gtk-rs/sys' }
+"gdk-pixbuf-sys:0.3.3" = { git = 'https://github.com/gtk-rs/sys' }
+"gdk-sys:0.3.3" = { git = 'https://github.com/gtk-rs/sys' }
+"gio-sys:0.3.3" = { git = 'https://github.com/gtk-rs/sys' }
+"glib-sys:0.3.3" = { git = 'https://github.com/gtk-rs/sys' }
+"gobject-sys:0.3.3" = { git = 'https://github.com/gtk-rs/sys' }
+"gtk-sys:0.3.3" = { git = 'https://github.com/gtk-rs/sys' }
+"pango-sys:0.3.3" = { git = 'https://github.com/gtk-rs/sys' }
