--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,12 +3,20 @@ name = "gtk-rs-examples"
 version = "0.0.1"
 authors = ["The Gtk-rs Project Developers"]
 
-[dependencies]
-glib = "^0"
-gdk = "^0"
-gdk-pixbuf = "^0"
-gtk = "^0"
-cairo-rs = "^0"
+[dependencies.glib]
+git = "https://github.com/gtk-rs/glib"
+
+[dependencies.cairo-rs]
+git = "https://github.com/gtk-rs/cairo"
+
+[dependencies.gdk-pixbuf]
+git = "https://github.com/gtk-rs/gdk-pixbuf"
+
+[dependencies.gdk]
+git = "https://github.com/gtk-rs/gdk"
+
+[dependencies.gtk]
+git = "https://github.com/gtk-rs/gtk"
 
 [features]
 #default = ["gtk_3_20"]
@@ -55,21 +63,3 @@ name = "simple_treeview"
 
 [[bin]]
 name = "menu_bar"
-
-[replace]
-"gtk:0.1.2" = { git = 'https://github.com/gtk-rs/gtk' }
-"gdk:0.5.2" = { git = 'https://github.com/gtk-rs/gdk' }
-"gdk-pixbuf:0.1.2" = { git = 'https://github.com/gtk-rs/gdk-pixbuf' }
-"pango:0.1.2" = { git = 'https://github.com/gtk-rs/pango' }
-"cairo-rs:0.1.2" = { git = 'https://github.com/gtk-rs/cairo' }
-"cairo-sys-rs:0.3.3" = { git = 'https://github.com/gtk-rs/cairo' }
-"gio:0.1.2" = { git = 'https://github.com/gtk-rs/gio' }
-"glib:0.1.2" = { git = 'https://github.com/gtk-rs/glib' }
-"atk-sys:0.3.3" = { git = 'https://github.com/gtk-rs/sys' }
-"gdk-pixbuf-sys:0.3.3" = { git = 'https://github.com/gtk-rs/sys' }
-"gdk-sys:0.3.3" = { git = 'https://github.com/gtk-rs/sys' }
-"gio-sys:0.3.3" = { git = 'https://github.com/gtk-rs/sys' }
-"glib-sys:0.3.3" = { git = 'https://github.com/gtk-rs/sys' }
-"gobject-sys:0.3.3" = { git = 'https://github.com/gtk-rs/sys' }
-"gtk-sys:0.3.3" = { git = 'https://github.com/gtk-rs/sys' }
-"pango-sys:0.3.3" = { git = 'https://github.com/gtk-rs/sys' }
