--- a/gdk-sys/Cargo.toml
+++ b/gdk-sys/Cargo.toml
@@ -4,12 +4,30 @@ pkg-config = "0.3.7"
 [dependencies]
 bitflags = "0.4"
 libc = "0.2"
-cairo-sys-rs = "^0.3.3"
-gdk-pixbuf-sys = "^0.3.3"
-gio-sys = "^0.3.3"
-glib-sys = "^0.3.3"
-gobject-sys = "^0.3.3"
-pango-sys = "^0.3.3"
+
+[dependencies.cairo-sys-rs]
+git = "https://github.com/gtk-rs/cairo"
+version = "0.3.2"
+
+[dependencies.gdk-pixbuf-sys]
+path = "../gdk-pixbuf-sys"
+version = "0.3.2"
+
+[dependencies.gio-sys]
+path = "../gio-sys"
+version = "0.3.2"
+
+[dependencies.glib-sys]
+path = "../glib-sys"
+version = "0.3.2"
+
+[dependencies.gobject-sys]
+path = "../gobject-sys"
+version = "0.3.2"
+
+[dependencies.pango-sys]
+path = "../pango-sys"
+version = "0.3.2"
 
 [features]
 v3_10 = ["v3_8"]
@@ -35,4 +53,4 @@ license = "MIT"
 links = "gdk"
 name = "gdk-sys"
 repository = "https://github.com/gtk-rs/sys"
-version = "0.3.3"
+version = "0.3.2"
