--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cairo-rs"
-version = "0.1.2"
+version = "0.1.1"
 authors = ["The Gtk-rs Project Developers"]
 build = "build.rs"
 
@@ -23,14 +23,21 @@ purge-lgpl-docs = ["gtk-rs-lgpl-docs"]
 v1_12 = ["cairo-sys-rs/v1_12"]
 
 [build-dependencies.gtk-rs-lgpl-docs]
-version = "^0.1.1"
+git = "https://github.com/gtk-rs/lgpl-docs"
+version = "0.1.0"
 optional = true
+
+[dependencies.cairo-sys-rs]
+path = "cairo-sys-rs"
+version = "0.3.2"
+
+[dependencies.glib]
+git = "https://github.com/gtk-rs/glib"
+version = "0.1.1"
 
 [dependencies]
 libc = "0.2"
 c_vec = "~1.2"
-cairo-sys-rs = "^0.3.3"
-glib = "^0.1.2"
 
 [target.'cfg(windows)'.dependencies]
 winapi = "0.2.7"
