glib: Rewrite string consts

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ name = "glib"
 [dependencies]
 bitflags = "0.5"
 libc = "0.2"
+lazy_static = "0.2"
 
 [dependencies.glib-sys]
 git = "https://github.com/gtk-rs/sys"
