gio: Add AppInfoCreateFlags generation

--- a/Gir.toml
+++ b/Gir.toml
@@ -10,6 +10,7 @@ generate = [
     "Gio.Action",
     "Gio.ActionMap",
     "Gio.AppInfo",
+    "Gio.AppInfoCreateFlags",
     "Gio.AppLaunchContext",
     "Gio.ApplicationFlags",
     "Gio.Menu",
