pango: Generate more objects

--- a/Gir.toml
+++ b/Gir.toml
@@ -13,6 +13,8 @@ generate = [
     "Pango.Context",
     "Pango.Direction",
     "Pango.EllipsizeMode",
+    "Pango.FontFace",
+    "Pango.FontFamily",
     "Pango.FontMask",
     "Pango.Gravity",
     "Pango.GravityHint",
@@ -21,6 +23,7 @@ generate = [
     "Pango.Script",
     "Pango.Stretch",
     "Pango.Style",
+    "Pango.Underline",
     "Pango.Variant",
     "Pango.Weight",
     "Pango.WrapMode",
