cairo: Include png feature for non-glib CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ addons:
 script:
   - rustc --version
   - cargo test --features "png embed-lgpl-docs"
-  - cargo test --no-default-features
+  - cargo test --no-default-features --features "png" 
   # catch any sneaked in lgpl docs
   - cargo build --features purge-lgpl-docs
   - git diff -R --exit-code
