--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,20 +3,12 @@ name = "gtk-rs-examples"
 version = "0.0.1"
 authors = ["The Gtk-rs Project Developers"]
 
-[dependencies.glib]
-git = "https://github.com/gtk-rs/glib"
-
-[dependencies.cairo-rs]
-git = "https://github.com/gtk-rs/cairo"
-
-[dependencies.gdk-pixbuf]
-git = "https://github.com/gtk-rs/gdk-pixbuf"
-
-[dependencies.gdk]
-git = "https://github.com/gtk-rs/gdk"
-
-[dependencies.gtk]
-git = "https://github.com/gtk-rs/gtk"
+[dependencies]
+glib = "^0"
+gdk = "^0"
+gdk-pixbuf = "^0"
+gtk = "^0"
+cairo-rs = "^0"
 
 [features]
 #default = ["gtk_3_20"]
