pango: Generate Coverage and Renderer structs

--- a/Gir.toml
+++ b/Gir.toml
@@ -11,6 +11,7 @@ generate = [
     "Pango.Alignment",
     "Pango.BidiType",
     "Pango.Context",
+    "Pango.Coverage",
     "Pango.Direction",
     "Pango.EllipsizeMode",
     "Pango.FontFace",
@@ -20,6 +21,7 @@ generate = [
     "Pango.GravityHint",
     "Pango.LayoutIter",
     "Pango.LayoutLine",
+    "Pango.Renderer",
     "Pango.Script",
     "Pango.Stretch",
     "Pango.Style",
