--- a/Gir.toml
+++ b/Gir.toml
@@ -57,6 +57,35 @@ status = "generate"
 [[object]]
 name = "Gio.Application"
 status = "generate"
+    [[object.function]]
+    name = "open"
+    ignore = true
+    [[object.signal]]
+    name = "open"
+    ignore = true
+
+[[object]]
+name = "Gio.File"
+status = "generate"
+    [[object.function]]
+    name = "new_for_path"
+        [object.function.return]
+        nullable = false
+    [[object.function]]
+    name = "new_for_uri"
+        [object.function.return]
+        nullable = false
+    [[object.function]]
+    name = "new_for_commandline_arg"
+        [object.function.return]
+        nullable = false
+    [[object.function]]
+    name = "new_for_commandline_arg_and_cwd"
+        [object.function.return]
+        nullable = false
+    [[object.function]]
+    name = "hash"
+    ignore = true
 
 [[object]]
 name = "Gio.Settings"
