gio: Wrapped Gio.FileInfo, and: - Gio.Cancellable - Gio.FileCreateFlags - Gio.FileQueryInfoFlags - Gio.FileType

--- a/Gir.toml
+++ b/Gir.toml
@@ -13,6 +13,11 @@ generate = [
     "Gio.AppInfoCreateFlags",
     "Gio.AppLaunchContext",
     "Gio.ApplicationFlags",
+    "Gio.Cancellable",
+    "Gio.FileCreateFlags",
+    "Gio.FileInfo",
+    "Gio.FileQueryInfoFlags",
+    "Gio.FileType",
     "Gio.Icon",
     "Gio.Menu",
     "Gio.MenuAttributeIter",
