--- a/Gir.toml
+++ b/Gir.toml
@@ -13,12 +13,19 @@ generate = [
     "Gio.AppInfoCreateFlags",
     "Gio.AppLaunchContext",
     "Gio.ApplicationFlags",
+    "Gio.Cancellable",
+    "Gio.FileCreateFlags",
+    "Gio.FileInfo",
+    "Gio.FileQueryInfoFlags",
+    "Gio.FileType",
     "Gio.Icon",
     "Gio.Menu",
     "Gio.MenuAttributeIter",
     "Gio.MenuItem",
     "Gio.MenuLinkIter",
     "Gio.MenuModel",
+    "Gio.Notification",
+    "Gio.NotificationPriority",
     "Gio.Permission",
     "Gio.Resource",
     "Gio.ResourceError",
