glib: Manually write g_filename_from_uri() bindings
This comes with a _utf8() suffix on Windows.

--- a/Gir.toml
+++ b/Gir.toml
@@ -115,6 +115,10 @@ status = "generate"
     #manual is_windows_utf8
     ignore = true
     [[object.function]]
+    name = "filename_from_uri"
+    #manual is_windows_utf8
+    ignore = true
+    [[object.function]]
     name = "find_program_in_path"
     #manual is_windows_utf8
     ignore = true
