--- a/Gir.toml
+++ b/Gir.toml
@@ -34,6 +34,8 @@ generate = [
     "Gio.SimpleActionGroup",
     "Gio.SimplePermission",
     "Gio.ThemedIcon",
+    "Gio.TlsCertificate",
+    "Gio.TlsCertificateFlags",
 ]
 
 ignore = [
