pango: Generate Matrix

--- a/Gir.toml
+++ b/Gir.toml
@@ -23,7 +23,9 @@ generate = [
     "Pango.GravityHint",
     "Pango.LayoutIter",
     "Pango.LayoutLine",
+    "Pango.Matrix",
     "Pango.Renderer",
+    "Pango.RenderPart",
     "Pango.Script",
     "Pango.Stretch",
     "Pango.Style",
