--- a/Gir.toml
+++ b/Gir.toml
@@ -71,6 +71,9 @@ status = "generate"
     name = "from_string"
         [object.function.return]
         nullable = false
+    [[object.function]]
+    name = "set_family_static"
+    ignore = true
 
 [[object]]
 name = "Pango.Font"
